<resources>
    <string name="app_name">MiniLinkedIn</string>

    <string name="your_name">Name</string>
    <string name="your_email">username@gmail.com</string>
    <string name="user_profile_add_image">add user image</string>
    <string name="user_profile_image">user image</string>

    <string name="section_education">Education</string>
    <string name="example_major">Computational Science and Engineering</string>
    <string name="example_school">Georgia Institution of Technology</string>

    <string name="section_experience">Experience</string>
    <string name="example_experience">Norfolk Southern</string>
    <string name="example_title">Web Developer</string>

    <string name="section_projects">Projects</string>
    <string name="example_project">Mini Linkedin Mobile Client</string>

    <string name="education_edit_school">School</string>
    <string name="education_edit_major">Major</string>
    <string name="education_edit_startDate">Start Date</string>
    <string name="education_edit_endDate">End Date</string>
    <string name="education_edit_course">Courses</string>

    <string name="experience_edit_company">Company</string>
    <string name="experience_edit_title">Title</string>
    <string name="experience_edit_startDate">Start Date</string>
    <string name="experience_edit_endDate">End Date</string>
    <string name="experience_edit_work">Work</string>

    <string name="project_edit_name">Project Name</string>
    <string name="project_edit_startDate">Start Date</string>
    <string name="project_edit_endDate">End Date</string>
    <string name="project_edit_detail">Details</string>


    <string name="action_save">save</string>
    <string name="action_delete">DELETE</string>
</resources>
