<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium">

    <EditText
        android:id="@+id/experience_edit_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:hint="@string/experience_edit_company" />

    <EditText
        android:id="@+id/experience_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:hint="@string/experience_edit_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/spacing_medium">

        <EditText
            android:id="@+id/experience_edit_startDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/experience_edit_startDate"
            android:inputType="date" />

        <EditText
            android:id="@+id/experience_edit_endDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/experience_edit_endDate"
            android:inputType="date" />
    </LinearLayout>

    <EditText
        android:id="@+id/experience_edit_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/experience_edit_work" />

    <TextView
        android:id="@+id/experience_delete_btn"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/action_delete"
        android:textSize="@dimen/delete_btn_font_size"
        style="@style/AppTheme.TextView.DeleteButton" />

</LinearLayout>